added script to show how to run

--- a/tryin_extractor.ipynb
+++ b/tryin_extractor.ipynb
@@ -30,32 +30,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = TextPreprocessor(\n",
-    "    remove_html_tags=True, print_lf_suggestions=False,\n",
+    "    remove_html_tags=True, print_lf_suggestions=True,\n",
     "    add_indicators_to_replaced_lf=True, illegal_shortforms=IILEGAL_SHORTFORMS\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['strain', 'coronavirus-229E strain', '229E strain', 'human coronavirus-229E strain', '229E strain']\n",
-      "['interfering', 'defective interfering', 'from defective interfering', 'inferred from defective interfering']\n",
-      "['strain', '115 strain', 'gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'porcine transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain']\n",
-      "['strain', 'virus-A59 strain', 'A59 strain', 'hepatitis virus-A59 strain', 'A59 strain', 'murine hepatitis virus-A59 strain', 'A59 strain']\n",
+      "dsagadsgas\n",
       "['strain', 'virus-CV777 strain', 'CV777 strain', 'diarrhea virus-CV777 strain', 'CV777 strain', 'epidemic diarrhea virus-CV777 strain', 'CV777 strain', 'porcine epidemic diarrhea virus-CV777 strain', 'CV777 strain', 'and porcine epidemic diarrhea virus-CV777 strain', 'CV777 strain']\n",
+      "dsagadsgas\n",
+      "['strain', 'coronavirus-ENT strain', 'ENT strain', 'bovine coronavirus-ENT strain', 'ENT strain']\n",
+      "dsagadsgas\n",
       "['strain', 'virus-Beaudette strain', 'Beaudette strain', 'bronchitis virus-Beaudette strain', 'Beaudette strain', 'infectious bronchitis virus-Beaudette strain', 'Beaudette strain', '[avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'sequences of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'genome sequences of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain']\n",
-      "['strain', 'coronavirus-ENT strain', 'ENT strain', 'bovine coronavirus-ENT strain', 'ENT strain']\n"
+      "dsagadsgas\n",
+      "['strain', 'virus-A59 strain', 'A59 strain', 'hepatitis virus-A59 strain', 'A59 strain', 'murine hepatitis virus-A59 strain', 'A59 strain']\n",
+      "dsagadsgas\n",
+      "['interfering', 'defective interfering', 'from defective interfering', 'inferred from defective interfering']\n",
+      "dsagadsgas\n",
+      "['strain', 'coronavirus-229E strain', '229E strain', 'human coronavirus-229E strain', '229E strain']\n",
+      "dsagadsgas\n",
+      "['strain', '115 strain', 'gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'porcine transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain']\n"
      ]
     }
    ],
@@ -89,49 +96,36 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['strain', 'coronavirus-229E strain', '229E strain', 'human coronavirus-229E strain', '229E strain']\n",
-      "['interfering', 'defective interfering', 'from defective interfering', 'inferred from defective interfering']\n",
-      "['strain', '115 strain', 'gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain', 'porcine transmissible gastroenteritis-Purdue 115 strain', 'Purdue 115 strain']\n",
-      "['strain', 'virus-A59 strain', 'A59 strain', 'hepatitis virus-A59 strain', 'A59 strain', 'murine hepatitis virus-A59 strain', 'A59 strain']\n",
-      "['strain', 'virus-CV777 strain', 'CV777 strain', 'diarrhea virus-CV777 strain', 'CV777 strain', 'epidemic diarrhea virus-CV777 strain', 'CV777 strain', 'porcine epidemic diarrhea virus-CV777 strain', 'CV777 strain', 'and porcine epidemic diarrhea virus-CV777 strain', 'CV777 strain']\n",
-      "['strain', 'virus-Beaudette strain', 'Beaudette strain', 'bronchitis virus-Beaudette strain', 'Beaudette strain', 'infectious bronchitis virus-Beaudette strain', 'Beaudette strain', '[avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'sequences of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain', 'genome sequences of six species in the coronavirus genus of the coronavirus family [avian infectious bronchitis virus-Beaudette strain', 'Beaudette strain']\n",
-      "['strain', 'coronavirus-ENT strain', 'ENT strain', 'bovine coronavirus-ENT strain', 'ENT strain']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[{'abbv': '(HCoV-229E)',\n",
-       "  'long_form': 'human coronavirus-229E strain',\n",
-       "  'lf_start_end_indices': (290, 319),\n",
-       "  'abbv_start_end_indices': (320, 331)},\n",
-       " {'abbv': '(DI)',\n",
-       "  'long_form': 'defective interfering',\n",
-       "  'lf_start_end_indices': (1732, 1753),\n",
-       "  'abbv_start_end_indices': (1754, 1758)},\n",
-       " {'abbv': '(TGEV-Purdue 115)',\n",
-       "  'long_form': '',\n",
-       "  'lf_start_end_indices': (None, None),\n",
-       "  'abbv_start_end_indices': (434, 451)},\n",
-       " {'abbv': '(MHV-A59)',\n",
-       "  'long_form': 'murine hepatitis virus-A59 strain',\n",
-       "  'lf_start_end_indices': (333, 366),\n",
-       "  'abbv_start_end_indices': (367, 376)},\n",
-       " {'abbv': '(PEDV-CV777)',\n",
+       "[{'abbv': '(PEDV-CV777)',\n",
        "  'long_form': 'porcine epidemic diarrhea virus-CV777 strain',\n",
        "  'lf_start_end_indices': (457, 501),\n",
        "  'abbv_start_end_indices': (502, 514)},\n",
+       " {'abbv': '(BCoV-ENT)',\n",
+       "  'long_form': 'bovine coronavirus-ENT strain',\n",
+       "  'lf_start_end_indices': (248, 277),\n",
+       "  'abbv_start_end_indices': (278, 288)},\n",
        " {'abbv': '(IBV-Beaudette)',\n",
        "  'long_form': 'infectious bronchitis virus-Beaudette strain',\n",
        "  'lf_start_end_indices': (186, 230),\n",
        "  'abbv_start_end_indices': (231, 246)},\n",
-       " {'abbv': '(BCoV-ENT)',\n",
-       "  'long_form': 'bovine coronavirus-ENT strain',\n",
-       "  'lf_start_end_indices': (248, 277),\n",
-       "  'abbv_start_end_indices': (278, 288)}]"
+       " {'abbv': '(MHV-A59)',\n",
+       "  'long_form': 'murine hepatitis virus-A59 strain',\n",
+       "  'lf_start_end_indices': (333, 366),\n",
+       "  'abbv_start_end_indices': (367, 376)},\n",
+       " {'abbv': '(DI)',\n",
+       "  'long_form': 'defective interfering',\n",
+       "  'lf_start_end_indices': (1732, 1753),\n",
+       "  'abbv_start_end_indices': (1754, 1758)},\n",
+       " {'abbv': '(HCoV-229E)',\n",
+       "  'long_form': 'human coronavirus-229E strain',\n",
+       "  'lf_start_end_indices': (290, 319),\n",
+       "  'abbv_start_end_indices': (320, 331)},\n",
+       " {'abbv': '(TGEV-Purdue 115)',\n",
+       "  'long_form': '',\n",
+       "  'lf_start_end_indices': (None, None),\n",
+       "  'abbv_start_end_indices': (434, 451)}]"
       ]
      },
      "execution_count": 7,
